Call MaybeNotifyNetworkBytes() in NotifyStartError().

This will cause OnNetworkBytesReceived() and OnNetworkBytesSent()
to be called before OnComplete() for this use case.

BUG=662050

Review-Url: https://codereview.chromium.org/2471533006
Cr-Commit-Position: refs/heads/master@{#430630}

Former-commit-id: 8a1fa9e760fd98d596290825ef6d171f860f4d92